# technique

./: .bzrignore  .ghci  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  CheckServer.hs  HttpServer.hs  LICENSE  Lookup.hs  Makefile  README.md  Technique.hs  build.rs  fourmolu.yaml  grammar.js  hie.yaml  package.yaml  stack.yaml  symlinks  technique.cabal  technique.pest  tree-sitter.json
.github/workflows/: check.yaml  release.yaml
content/: 404.html  hello.html
examples/golden/: ManyAttributes.t
examples/minimal/: ExampleOfEverything.tq  SimpleList.tq
examples/prototype/: AirlockPowerdown.tq  ChristmasTurkey.tq  DatabaseUpgrade.tq  DontPanic.tq  GovernmentForm.tq  NetworkProbe.tq  SurgicalSafetyChecklist.tq  SystemsEngineeringProcess.tq
lib/Technique/: Builtins.hs  Diagnostics.hs  Evaluator.hs  Failure.hs  Formatter.hs  Instantiate.hs  Internal.hs  Language.hs  Parser.hs  Procedure.hs  Quantity.hs  Translate.hs
src/: HttpServer.hs  Lookup.hs  Technique.hs  TechniqueMain.hs  TechniqueUser.hs  grammar.lalrpop  lib.rs  main.rs  parser.c  technique.lalrpop
src/domain/: adapter.rs  engine.rs  mod.rs  serialize.rs  typst.rs
src/domain/checklist/: adapter.rs  mod.rs  types.rs  typst.rs
src/domain/nasa_esa_iss/: adapter.rs  mod.rs
src/domain/nasa_flight_plan/: adapter.rs
src/domain/procedure/: adapter.rs  mod.rs  types.rs  typst.rs
src/domain/recipe/: adapter.rs  mod.rs  types.rs  typst.rs
src/domain/source/: adapter.rs  mod.rs  types.rs  typst.rs
src/editor/: mod.rs  server.rs
src/error/: display.rs  mod.rs
src/formatter/: format.rs  mod.rs
src/formatting/: formatter.rs  mod.rs  renderer.rs  syntax.rs
src/highlighting/: mod.rs  renderer.rs  terminal.rs  typst.rs
src/language/: error.rs  mod.rs  quantity.rs  types.rs
src/linking/: linker.rs  mod.rs
src/linking/checks/: linker.rs
src/output/: mod.rs
src/parsing/: checks.rs  mod.rs  parser.rs  scope.rs  tree_sitter.rs
src/parsing/checks/: errors.rs  parser.rs  verify.rs
src/problem/: format.rs  messages.rs  mod.rs  present.rs
src/program/: mod.rs  types.rs
src/regex/: cache.rs  mod.rs
src/rendering/: mod.rs  renderer.rs  source.rs  terminal.rs  typst.rs
src/resolution/: mod.rs  resolver.rs
src/resolution/checks/: resolver.rs
src/runner/: context.rs  driver.rs  evaluator.rs  library.rs  manifest.rs  mod.rs  path.rs  prompt.rs  runner.rs  state.rs  value.rs
src/runner/checks/: driver.rs  evaluator.rs  library.rs  path.rs  prompt.rs  runner.rs  state.rs  value.rs
src/templating/: checklist.rs  checklist.typ  engine.rs  mod.rs  nasa_esa_iss.rs  nasa_esa_iss.typ  nasa_flight_plan.rs  nasa_flight_plan.typ  procedure.rs  procedure.typ  recipe.rs  recipe.typ  source.rs  source.typ  template.rs  typst.rs
src/templating/checklist/: adapter.rs  mod.rs  renderer.rs
src/templating/procedure/: adapter.rs  mod.rs  renderer.rs  types.rs
src/translate/: generated.rs
src/translation/: mod.rs  passes.rs  translator.rs  types.rs
src/translation/checks/: errors.rs  translate.rs
src/value/: mod.rs  types.rs
src/value/checks/: types.rs
tests/: Check.hs  CheckAbstractSyntax.hs  CheckConcreteSyntax.hs  CheckDatastore.hs  CheckEvaluationPhase.hs  CheckQuantityBehaviour.hs  CheckServer.hs  CheckSkeletonParser.hs  CheckTranslationPhase.hs  CheckTranslationStage.hs  EvaluateSnippet.hs  ExampleProcedure.hs  GET  LaunchCodes.hs  MockData.hs  PUT  ParseSnippet.hs  Snippet.hs  TestProgram.hs  TestSuite.hs  TranslateSnippet.hs  Utilities.hs  check.hs  integration.rs  redis.conf  snippet.hs  start.sh  stop.sh
tests/broken/: BadDeclaration.tq  DeclartionParentheses.tq  IllegalUnitSymbol.tq  ParametersWithoutParentheses.tq  ScrapCode.tq
tests/broken/constraints/: TimeBudgetExceeded.tq
tests/broken/linking/: WrongArgumentCount.tq
tests/broken/parsing/: MagicLine.tq  MissingParenthesis.tq  MixedSectionContent.tq  UnclosedInterpolation.tq
tests/broken/resolution/: InvalidCostLiteral.tq  UnboundVariable.tq
tests/broken/translation/: DuplicateProcedure.tq  DuplicateTitle.tq  InterleavedDescription.tq  UnresolvedProcedure.tq
tests/common/: mod.rs
tests/formatting/: formatter.rs  golden.rs  mod.rs
tests/golden/: Bedtime.tq
tests/golden/parsing/: ExampleOfEverything.tq  MorningToBedtime.tq  NewVersionToProduction.tq
tests/golden/runner/: Century.pfftt  Century.tq  ConfirmRelease.pfftt  DemolitionBeams.pfftt  ExecutionInSteps.pfftt  ExecutionInSteps.tq  InspectHatches.pfftt  MeltCubes.pfftt  MeltCubes.tq  PatioCleaning.pfftt
tests/linking/: broken.rs  mod.rs
tests/parsing/: broken.rs  errors.rs  formatter.rs  mod.rs  parser.rs  samples.rs
tests/resolution/: broken.rs
tests/runner/: samples.rs
tests/samples/: Demolition.tq  EmergencyBroadcast.tq  RoastTurkey.tq  TabletOfQuantity.tq
tests/samples/parsing/: Choices.tq  DoorActions.tq  HeaderAndDeclaration.tq  KnownSpanLengths.tq  LocalNetwork.tq  OpenDoor.tq  ResponseLiterals.tq  RoastTurkey.tq  Sequence.tq
tests/samples/runner/: ConfirmRelease.pfftt  ConfirmRelease.tq  Curl.tq  DemolitionBeams.pfftt  DemolitionBeams.tq  ExecutionInSteps.pfftt  ExecutionInSteps.tq  Find.tq  InspectHatches.pfftt  InspectHatches.tq  PatioCleaning.pfftt  PatioCleaning.tq
tests/templating/: mod.rs
tests/templating/rendering/: checklist.rs  mod.rs  procedure.rs
tests/translation/: broken.rs  mod.rs  samples.rs
