[package]
name = "technique"
version = "0.3.3"
edition = "2021"
description = "A domain specific lanaguage for procedures."
authors = [ "Andrew Cowie" ]
repository = "https://github.com/technique-lang/technique"
license = "MIT"

[dependencies]
clap = { version = "4.5.16", features = [ "wrap_help" ] }
regex = "1.11.1"
serde = { version = "1.0.209", features = [ "derive" ] }
tinytemplate = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
