[package]
name = "technique"
version = "0.3.4"
edition = "2021"
description = "A domain specific language for procedures."
authors = [ "Andrew Cowie" ]
repository = "https://github.com/technique-lang/technique"
license = "MIT"

[dependencies]
clap = { version = "4.5.16", features = [ "wrap_help" ] }
owo-colors = "4"
regex = "1.11.1"
serde = { version = "1.0.209", features = [ "derive" ] }
tinytemplate = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
