[package]
name = "technique"
version = "0.4.5"
edition = "2021"
description = "A domain specific language for procedures."
authors = [ "Andrew Cowie" ]
repository = "https://github.com/technique-lang/technique"
license = "MIT"

[dependencies]
clap = { version = "4.5.16", features = [ "wrap_help" ] }
lsp-server = "0.7.9"
lsp-types = "0.97"
owo-colors = "4"
regex = "1.11.1"
serde = { version = "1.0.209", features = [ "derive" ] }
serde_json = "1.0"
tinytemplate = "1.2.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }

[build-dependencies]

[profile.release]
debug = "limited"
strip = true
lto = true
