cabal-version:       >= 1.10
name:                technique
version:             0.1.3
synopsis:            Procedures and Sequences
license:             GPL-2
license-file:        COPYING
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2011-2015 Operational Dynamics Consulting, Pty Ltd and Others
category:            Web
tested-with:         GHC == 7.10

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     free

  hs-source-dirs:    lib

  exposed-modules:   Technique.Procedure

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -prof -fprof-auto-top


executable           technique
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     MonadCatchIO-transformers,
                     mtl,
                     hedis >= 0.5,
                     snap-core,
                     snap-server,
                     http-streams,
                     technique

  hs-source-dirs:    src
  main-is:           Technique.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

  build-depends:     base,
                     bytestring,
                     containers,
                     transformers,
                     MonadCatchIO-transformers,
                     mtl,
                     HUnit,
                     hedis,
                     hspec,
                     snap-core,
                     snap-server,
                     snap,
                     unordered-containers,
                     http-streams

  hs-source-dirs:    src,tests
  main-is:           TestProgram.hs
                      

-- vim: set tabstop=21 expandtab:
